Ставит точку во всех описаниях графики

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
       <div class="container">
         <a class="page-header-link" href="#">
           <img class="page-header-logo" src="images/logo-header.svg" width="145" height="36"
-            alt="Логотип интернет-магазина «Device»">
+            alt="Логотип интернет-магазина «Device».">
         </a>
         <div class="search-form-container">
           <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -152,7 +152,7 @@
                   <section class="prouct-card">
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-1.jpg"
-                        width="360" height="380" alt="Фотография любительской селфи-палки">
+                        width="360" height="380" alt="Фотография любительской селфи-палки.">
                       <h3 class="product-card-title">Любительская селфи-палка</h3>
                     </a>
                     <span class="product-card-price">500 ₽</span>
@@ -160,7 +160,7 @@
                   <section>
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-2.jpg"
-                        width="360" height="380" alt="Фотография профессиональной селфи-палки">
+                        width="360" height="380" alt="Фотография профессиональной селфи-палки.">
                       <h3 class="product-card-title">Профессиональная селфи-палка</h3>
                     </a>
                     <span class="product-card-price">1 500 ₽</span>
@@ -168,7 +168,7 @@
                   <section>
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-3.jpg"
-                        width="360" height="380" alt="Фотография непотопляемой селфи-палки">
+                        width="360" height="380" alt="Фотография непотопляемой селфи-палки.">
                       <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
                     </a>
                     <span class="product-card-price">2 500 ₽</span>
@@ -176,7 +176,7 @@
                   <section>
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-4.jpg"
-                        width="360" height="380" alt="Фотография селфи-палки в виде руки">
+                        width="360" height="380" alt="Фотография селфи-палки в виде руки.">
                       <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
                     </a>
                     <span class="product-card-price">1 500 ₽</span>
@@ -226,7 +226,7 @@
         <section class="footer-contacts">
           <h2 class="visually-hidden">Адрес</h2>
           <img class="footer-contacts-logo" src="images/logo-footer.svg" width="145" height="36"
-            alt="Логотип интернет-магазина «Device»">
+            alt="Логотип интернет-магазина «Device».">
           <address class="contacts-address">
             <p class="footer-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           </address>
@@ -268,7 +268,7 @@
             <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
           <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-            <img class="about-text" src="images/html-academy-icon.svg" width="115" height="33" alt="html-academy-logo">
+            <img class="about-text" src="images/html-academy-icon.svg" width="115" height="33" alt="html-academy-logo.">
           </a>
         </section>
       </div>
