--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <a class="page-header-link" href="#">
           <img class="page-header-logo" src="images/logo-header.svg" width="145" height="36"
-            alt="Логотип интернет-магазина «Device»">
+            alt="Логотип интернет-магазина «Device».">
         </a>
         <div class="user-link-row">
           <div class="search-form-container">
@@ -49,7 +49,7 @@
           <h2 class="visually-hidden">Популярные товары</h2>
           <div class="slide">
             <img class="slider-image" src="images/slider-img/slider-1.png" width="560" height="560"
-              alt="Фото квадрокоптера">
+              alt="Фото квадрокоптера.">
             <div class="slider-info-container">
               <h3 class="main-title slider-title">Порхает как бабочка, жалит как пчела!</h3>
               <p class="slider-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
@@ -68,7 +68,7 @@
 
           <div class="slide">
             <img class="slider-image" src="images/slider-img/slider-2.png" width="560" height="560"
-              alt="Фото фитнес-браслета">
+              alt="Фото фитнес-браслета.">
             <div class="slider-info-container">
               <h3 class="main-title slider-title">Худеем правильно!</h3>
               <p class="slider-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
@@ -84,7 +84,7 @@
 
           <div class="slide">
             <img class="slider-image" src="images/slider-img/slider-3.png" width="560" height="560"
-              alt="Фото палки для селфи">
+              alt="Фото палки для селфи.">
             <div class="slider-info-container">
               <h3 class="main-title slider-title">Делай селфи, как Бен Стиллер!</h3>
               <p class="slider-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
@@ -206,7 +206,7 @@
       <section class="company-info">
         <div class="company-info-container">
           <div class="about-us">
-            <h2 class="main-title about-us-title">О нас</h2>
+            <h2 class="main-title company-info-title">О нас</h2>
             <p class="about-us-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из
               нас.
             </p>
@@ -228,7 +228,7 @@
           </div>
 
           <div class="contacts">
-            <h2 class="main-title contacts-title">Контакты</h2>
+            <h2 class="main-title company-info-title">Контакты</h2>
             <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис.
               Заодно сможете проверить работоспособность покупки.</p>
             <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
@@ -272,7 +272,7 @@
         <section class="footer-contacts">
           <h2 class="visually-hidden">Адрес</h2>
           <img class="footer-contacts-logo" src="images/logo-footer.svg" width="145" height="36"
-            alt="Логотип интернет-магазина «Device»">
+            alt="Логотип интернет-магазина «Device».">
           <address class="footer-contacts-address">
             <p class="footer-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           </address>
@@ -314,7 +314,7 @@
             <a class="footer-contacts-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
           </address>
           <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-            <img class="about-text" src="images/html-academy-icon.svg" width="115" height="33" alt="html-academy-logo">
+            <img class="about-text" src="images/html-academy-icon.svg" width="115" height="33" alt="html-academy-logo.">
           </a>
         </section>
       </div>
