Исправляет фон хэдера и хэдер каталога

--- a/catalog.html
+++ b/catalog.html
@@ -14,31 +14,33 @@
           <img class="page-header-logo" src="images/logo-header.svg" width="145" height="36"
             alt="Логотип интернет-магазина «Device».">
         </a>
-        <div class="search-form-container">
-          <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label class="search">
-              <input class="search-input" type="search" name="search-field" placeholder="Поиск по сайту"
-                value="Текст поиска">
-            </label>
-            <button class="button search-button" type="submit">Найти</button>
-          </form>
-          <a class="user-link user-login" href="#">Коля Петухов</a>
+        <div class="user-link-row">
+          <div class="search-form-container">
+            <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
+              <label class="search">
+                <input class="search-input" type="search" name="search-field" placeholder="Поиск по сайту"
+                  value="Текст поиска">
+              </label>
+              <button class="button search-button" type="submit">Найти</button>
+            </form>
+            <a class="user-link user-login" href="#">Коля Петухов</a>
+            <a class="user-link user-exit" href="#">Выйти</a>
+          </div>
+          <div class="user-link-container">
+            <a class="user-link user-compare" href="#">Сравнить</a>
+            <a class="user-link user-basket" href="#">Корзина</a>
+          </div>
         </div>
-        <div class="user-link-container">
-          <a class="user-link user-exit" href="#">Выйти</a>
-          <a class="user-link user-compare" href="#">Сравнить</a>
-          <a class="user-link user-basket" href="#">Корзина</a>
+        <div class="navigation-row">
+          <div class="catalog-container">
+            <a class="navigation-link navigation-catalog" href="catalog.html">Каталог товаров</a>
+          </div>
+          <nav class="navigation">
+            <a class="navigation-link" href="#">Доставка</a>
+            <a class="navigation-link" href="#">Гарантия</a>
+            <a class="navigation-link" href="#">Контакты</a>
+          </nav>
         </div>
-      </div>
-      <div class="container">
-        <div class="catalog-container">
-          <a class="navigation-link navigation-catalog" href="catalog.html">Каталог товаров</a>
-        </div>
-        <nav class="navigation">
-          <a class="navigation-link" href="#">Доставка</a>
-          <a class="navigation-link" href="#">Гарантия</a>
-          <a class="navigation-link" href="#">Контакты</a>
-        </nav>
       </div>
     </header>
 
