Добавляет ссылки в логотипы

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <a class="page-header-link" href="#">
+        <a class="page-header-link" href="index.html">
           <img class="page-header-logo" src="images/logo-header.svg" width="145" height="36"
             alt="Логотип интернет-магазина «Device».">
         </a>
@@ -271,8 +271,10 @@
       <div class="container">
         <section class="footer-contacts">
           <h2 class="visually-hidden">Адрес</h2>
-          <img class="footer-contacts-logo" src="images/logo-footer.svg" width="145" height="36"
-            alt="Логотип интернет-магазина «Device».">
+          <a class="page-header-link" href="index.html">
+            <img class="footer-contacts-logo" src="images/logo-footer.svg" width="145" height="36"
+              alt="Логотип интернет-магазина «Device».">
+          </a>
           <address class="footer-contacts-address">
             <p class="footer-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           </address>
