--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 под
                 стандартную камеру.</p>
               <button class="button button-primary" type="button">Подробнее</button>
-              <dl class="table-info">
+              <dl class="table-info-1">
                 <dt class="table-title">Дальность полёта</dt>
                 <dd class="table-description">800 М</dd>
                 <dt class="table-title">Радиус поражения</dt>
@@ -75,7 +75,7 @@
                 соблюдать
                 диету.</p>
               <button class="button button-primary" type="button">Подробнее</button>
-              <dl class="table-info">
+              <dl class="table-info-2">
                 <dt class="table-title">Без подзарядки</dt>
                 <dd class="table-description">48 часов</dd>
               </dl>
@@ -91,7 +91,7 @@
                 метров
                 длиной и весом всего 5 кг.</p>
               <button class="button button-primary" type="button">Подробнее</button>
-              <dl class="table-info">
+              <dl class="table-info-3">
                 <dt class="table-title">Длина палки</dt>
                 <dd class="table-description">8,5 М</dd>
                 <dt class="table-title">Вес палки</dt>
