--- a/catalog.html
+++ b/catalog.html
@@ -188,29 +188,29 @@
 
                   <section class="pagination-menu">
                     <div class="pagination-back-btn">
-                      <a class="pagination-link pagination-prev-disabled" href="">
+                      <a class="pagination-link pagination-prev-disabled" href="#">
                         <span class="pagination-prev">Назад</span>
                       </a>
                     </div>
                     <ul class="pagination">
                       <li class="pagination-item">
-                        <a class="pagination-link pagination-number" href="">1</a>
+                        <a class="pagination-link pagination-number" href="#">1</a>
                       </li>
                       <li class="pagination-item">
-                        <a class="pagination-link pagination-number" href="">2</a>
+                        <a class="pagination-link pagination-number" href="#">2</a>
                       </li>
                       <li class="pagination-item">
-                        <a class="pagination-link pagination-number" href="">3</a>
+                        <a class="pagination-link pagination-number" href="#">3</a>
                       </li>
                       <li class="pagination-item">
-                        <a class="pagination-link pagination-number" href="">...</a>
+                        <a class="pagination-link pagination-number" href="#">...</a>
                       </li>
                       <li class="pagination-item">
-                        <a class="pagination-link pagination-number" href="">15</a>
+                        <a class="pagination-link pagination-number" href="#">15</a>
                       </li>
                     </ul>
                     <div class="pagination-next-btn">
-                      <a class="pagination-link pagination-next" href="">
+                      <a class="pagination-link pagination-next" href="#">
                         <span class="pagination-next">Вперёд</span>
                       </a>
                     </div>
@@ -227,9 +227,11 @@
       <div class="container">
         <section class="footer-contacts">
           <h2 class="visually-hidden">Адрес</h2>
-          <img class="footer-contacts-logo" src="images/logo-footer.svg" width="145" height="36"
-            alt="Логотип интернет-магазина «Device».">
-          <address class="contacts-address">
+          <a class="page-header-link" href="index.html">
+            <img class="footer-contacts-logo" src="images/logo-footer.svg" width="145" height="36"
+              alt="Логотип интернет-магазина «Device».">
+          </a>
+          <address class="footer-contacts-address">
             <p class="footer-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           </address>
         </section>
@@ -266,8 +268,8 @@
 
         <section class="footer-connection">
           <h2 class="visually-hidden">Позвоните нам</h2>
-          <address class="footer-contacts-address">
-            <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          <address class="footer-phone">
+            <a class="footer-contacts-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
           </address>
           <a class="htmlacademy-link" href="https://htmlacademy.ru/">
             <img class="about-text" src="images/html-academy-icon.svg" width="115" height="33" alt="html-academy-logo.">
