Добавляет стили кнопке после каталога

--- a/catalog.html
+++ b/catalog.html
@@ -151,7 +151,7 @@
 
               <section class="product-list">
                 <div class="product-list-container">
-                  <section class="prouct-card">
+                  <section class="product-card">
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-1.jpg"
                         width="360" height="380" alt="Фотография любительской селфи-палки.">
@@ -183,39 +183,37 @@
                     </a>
                     <span class="product-card-price">1 500 ₽</span>
                   </section>
-
-                  <button class="button button-secondary" type="button">Загрузить ещё</button>
-
-                  <section class="pagination-menu">
-                    <div class="pagination-back-btn">
-                      <a class="pagination-link pagination-prev-disabled" href="#">
-                        <span class="pagination-prev">Назад</span>
-                      </a>
-                    </div>
-                    <ul class="pagination">
-                      <li class="pagination-item">
-                        <a class="pagination-link pagination-number" href="#">1</a>
-                      </li>
-                      <li class="pagination-item">
-                        <a class="pagination-link pagination-number" href="#">2</a>
-                      </li>
-                      <li class="pagination-item">
-                        <a class="pagination-link pagination-number" href="#">3</a>
-                      </li>
-                      <li class="pagination-item">
-                        <a class="pagination-link pagination-number" href="#">...</a>
-                      </li>
-                      <li class="pagination-item">
-                        <a class="pagination-link pagination-number" href="#">15</a>
-                      </li>
-                    </ul>
-                    <div class="pagination-next-btn">
-                      <a class="pagination-link pagination-next" href="#">
-                        <span class="pagination-next">Вперёд</span>
-                      </a>
-                    </div>
-                  </section>
                 </div>
+                <button class="button button-secondary" type="button">Загрузить ещё</button>
+                <section class="pagination-menu">
+                  <div class="pagination-back-btn">
+                    <a class="pagination-link pagination-prev-disabled" href="#">
+                      <span class="pagination-prev">Назад</span>
+                    </a>
+                  </div>
+                  <ul class="pagination">
+                    <li class="pagination-item">
+                      <a class="pagination-link pagination-number" href="#">1</a>
+                    </li>
+                    <li class="pagination-item">
+                      <a class="pagination-link pagination-number" href="#">2</a>
+                    </li>
+                    <li class="pagination-item">
+                      <a class="pagination-link pagination-number" href="#">3</a>
+                    </li>
+                    <li class="pagination-item">
+                      <a class="pagination-link pagination-number" href="#">...</a>
+                    </li>
+                    <li class="pagination-item">
+                      <a class="pagination-link pagination-number" href="#">15</a>
+                    </li>
+                  </ul>
+                  <div class="pagination-next-btn">
+                    <a class="pagination-link pagination-next" href="#">
+                      <span class="pagination-next">Вперёд</span>
+                    </a>
+                  </div>
+                </section>
               </section>
             </div>
           </div>
