--- a/catalog.html
+++ b/catalog.html
@@ -20,20 +20,40 @@
               <label class="search">
                 <input class="search-input" type="search" name="search-field" placeholder="Поиск по сайту"
                   value="Текст поиска">
+                <svg class="search-icon" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                  width="16" height="16" fill="none" viewBox="0 0 16 16">
+                  <path fill="#000"
+                    d="m15.7 14.3-3.1-3.1C13.5 10 14 8.6 14 7c0-3.9-3.1-7-7-7S0 3.1 0 7s3.1 7 7 7c1.6 0 3-.5 4.2-1.4l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.2-.1-.5-.3-.7ZM2 7c0-2.8 2.2-5 5-5s5 2.2 5 5-2.2 5-5 5-5-2.2-5-5Z" />
+                </svg>
               </label>
               <button class="button search-button" type="submit">Найти</button>
             </form>
-            <a class="user-link user-login" href="#">Коля Петухов</a>
+            <a class="user-link user-login" href="#"><svg class="user-link-icon" aria-hidden="true" focusable="false"
+                xmlns="http://www.w3.org/2000/svg" width="13" height="12" fill="none" viewBox="0 0 13 12">
+                <path fill="#000"
+                  d="M0 12h13c-.2-2.6-2.1-4.8-4.7-5.5 1-.6 1.7-1.7 1.7-3C10 1.6 8.4 0 6.5 0S3 1.6 3 3.5c0 1.3.7 2.4 1.7 3C2.1 7.2.2 9.4 0 12Z" />
+              </svg>Коля Петухов</a>
             <a class="user-link user-exit" href="#">Выйти</a>
           </div>
           <div class="user-link-container">
-            <a class="user-link user-compare" href="#">Сравнить</a>
-            <a class="user-link user-basket" href="#">Корзина</a>
+            <a class="user-link user-compare" href="#"><svg class="user-link-icon" aria-hidden="true" focusable="false"
+                xmlns="http://www.w3.org/2000/svg" width="10" height="12" fill="none" viewBox="0 0 10 12">
+                <path fill="#000" d="M6 0H4v12h2V0ZM2 4H0v8h2V4ZM10 3H8v9h2V3Z" />
+              </svg>Сравнить</a>
+            <a class="user-link user-basket" href="#"><svg class="user-link-icon" aria-hidden="true" focusable="false"
+                xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14">
+                <path fill="#000"
+                  d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z" />
+              </svg>Корзина</a>
           </div>
         </div>
         <div class="navigation-row">
           <div class="catalog-container">
-            <a class="navigation-link navigation-catalog" href="catalog.html">Каталог товаров</a>
+            <a class="navigation-link navigation-catalog" href="catalog.html">Каталог товаров <span
+                class="header-catalog-image"><svg class="header-catalog-icon" aria-hidden="true" focusable="false"
+                  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16">
+                  <path fill="#000" d="M16 7H9V0H7v7H0v2h7v7h2V9h7V7Z" />
+                </svg></span></a>
           </div>
           <nav class="navigation">
             <a class="navigation-link" href="#">Доставка</a>
@@ -52,9 +72,19 @@
             <ul class="breadcrumbs-list">
               <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="index.html">Главная</a>
+                <svg class="breadcrumbs-icon" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                  width="4" height="8" fill="none" viewBox="0 0 4 8">
+                  <path fill="#000"
+                    d="m3.8 3.6-3-3C.6.4.3.4.1.6c-.1.2-.1.6 0 .8L2.7 4 .1 6.6c-.1.2-.1.5 0 .7.1.1.3.2.4.2.1 0 .3-.1.4-.1l3-3c0-.1.1-.3.1-.4 0-.1-.1-.3-.2-.4Z" />
+                </svg>
               </li>
               <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="#">Каталог товаров</a>
+                <svg class="breadcrumbs-icon" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                  width="4" height="8" fill="none" viewBox="0 0 4 8">
+                  <path fill="#000"
+                    d="m3.8 3.6-3-3C.6.4.3.4.1.6c-.1.2-.1.6 0 .8L2.7 4 .1 6.6c-.1.2-.1.5 0 .7.1.1.3.2.4.2.1 0 .3-.1.4-.1l3-3c0-.1.1-.3.1-.4 0-.1-.1-.3-.2-.4Z" />
+                </svg>
               </li>
               <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link">Моноподы для селфи</a>
@@ -125,7 +155,7 @@
                   </ul>
                 </fieldset>
 
-                <button class="button button-primary" type="submit">Показать</button>
+                <button class="button button-primary btn-filter" type="submit">Показать</button>
               </form>
             </div>
 
@@ -141,9 +171,17 @@
                   <div class="sorting-button-container">
                     <button class="sorting-menu-button">
                       <span class="visually-hidden">Сначала дешевые</span>
+                      <svg class="sorting-icon" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                        width="12" height="10" fill="none" viewBox="0 0 12 10">
+                        <path fill="#000" d="m6 0 5.5 10H.5" />
+                      </svg>
                     </button>
                     <button class="sorting-menu-button">
                       <span class="visually-hidden">Сначала дорогие</span>
+                      <svg class="sorting-icon" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                        width="12" height="10" fill="none" viewBox="0 0 12 10">
+                        <path fill="#000" d="M6 10 .5 0h11" />
+                      </svg>
                     </button>
                   </div>
                 </div>
@@ -159,7 +197,7 @@
                     </a>
                     <span class="product-card-price">500 ₽</span>
                   </section>
-                  <section>
+                  <section class="product-card">
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-2.jpg"
                         width="360" height="380" alt="Фотография профессиональной селфи-палки.">
@@ -167,7 +205,7 @@
                     </a>
                     <span class="product-card-price">1 500 ₽</span>
                   </section>
-                  <section>
+                  <section class="product-card">
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-3.jpg"
                         width="360" height="380" alt="Фотография непотопляемой селфи-палки.">
@@ -175,7 +213,7 @@
                     </a>
                     <span class="product-card-price">2 500 ₽</span>
                   </section>
-                  <section>
+                  <section class="product-card">
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-4.jpg"
                         width="360" height="380" alt="Фотография селфи-палки в виде руки.">
