Корректирует фоны в хэдере и z-index у блоков
Также поправил каталог продуктов

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="page-header">
-      <div class="container">
+      <div class="container catalog-header">
         <a class="page-header-link" href="#">
           <img class="page-header-logo" src="images/logo-header.svg" width="145" height="36"
             alt="Логотип интернет-магазина «Device».">
@@ -193,33 +193,46 @@
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-1.jpg"
                         width="360" height="380" alt="Фотография любительской селфи-палки.">
-                      <h3 class="product-card-title">Любительская селфи-палка</h3>
                     </a>
-                    <span class="product-card-price">500 ₽</span>
+                    <div class="product-description">
+                      <a class="product-card-link" href="#">
+                        <h3 class="product-card-title">Любительская<br>селфи-палка</h3>
+                      </a>
+                      <span class="product-card-price">500 ₽</span>
+                    </div>
                   </section>
                   <section class="product-card">
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-2.jpg"
                         width="360" height="380" alt="Фотография профессиональной селфи-палки.">
-                      <h3 class="product-card-title">Профессиональная селфи-палка</h3>
                     </a>
-                    <span class="product-card-price">1 500 ₽</span>
+                    <div class="product-description">
+                      <a class="product-card-link" href="#">
+                        <h3 class="product-card-title">Профессиональная селфи-палка</h3>
+                      </a>
+                      <span class="product-card-price">1 500 ₽</span>
                   </section>
                   <section class="product-card">
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-3.jpg"
                         width="360" height="380" alt="Фотография непотопляемой селфи-палки.">
-                      <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
                     </a>
-                    <span class="product-card-price">2 500 ₽</span>
+                    <div class="product-description">
+                      <a class="product-card-link" href="#">
+                        <h3 class="product-card-title">Непотопляемая<br>селфи-палка</h3>
+                      </a>
+                      <span class="product-card-price">2 500 ₽</span>
                   </section>
                   <section class="product-card">
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-4.jpg"
                         width="360" height="380" alt="Фотография селфи-палки в виде руки.">
-                      <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
                     </a>
-                    <span class="product-card-price">1 500 ₽</span>
+                    <div class="product-description">
+                      <a class="product-card-link" href="#">
+                        <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
+                      </a>
+                      <span class="product-card-price">1 500 ₽</span>
                   </section>
                 </div>
                 <button class="button button-secondary" type="button">Загрузить ещё</button>
