--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <main class="main-container main-index">
       <div class="container">
         <h1 class="visually-hidden">Интернет-магазин «Device»</h1>
-        <section class="slider">
+        <section class="slider slider-1">
           <h2 class="visually-hidden">Популярные товары</h2>
           <div class="slide">
             <img class="slider-image" src="images/slider-img/slider-1.png" width="560" height="560"
@@ -77,7 +77,7 @@
                 под
                 стандартную камеру.</p>
               <button class="button button-primary btn-slider" type="button">Подробнее</button>
-              <dl class="table-info-1">
+              <dl class="table-info-1 table-info">
                 <dt class="table-title">Дальность полёта</dt>
                 <dd class="table-description">800 М</dd>
                 <dt class="table-title">Радиус поражения</dt>
@@ -86,7 +86,7 @@
             </div>
           </div>
 
-          <div class="slide">
+          <div class="slide slider-2">
             <img class="slider-image" src="images/slider-img/slider-2.png" width="560" height="560"
               alt="Фото фитнес-браслета.">
             <div class="slider-info-container">
@@ -95,14 +95,14 @@
                 соблюдать
                 диету.</p>
               <button class="button button-primary btn-slider" type="button">Подробнее</button>
-              <dl class="table-info-2">
+              <dl class="table-info-2 table-info">
                 <dt class="table-title">Без подзарядки</dt>
                 <dd class="table-description">48 часов</dd>
               </dl>
             </div>
           </div>
 
-          <div class="slide">
+          <div class="slide slider-3">
             <img class="slider-image" src="images/slider-img/slider-3.png" width="560" height="560"
               alt="Фото палки для селфи.">
             <div class="slider-info-container">
@@ -111,7 +111,7 @@
                 метров
                 длиной и весом всего 5 кг.</p>
               <button class="button button-primary btn-slider" type="button">Подробнее</button>
-              <dl class="table-info-3">
+              <dl class="table-info-3 table-info">
                 <dt class="table-title">Длина палки</dt>
                 <dd class="table-description">8,5 М</dd>
                 <dt class="table-title">Вес палки</dt>
@@ -396,7 +396,7 @@
       <div class="container">
         <section class="footer-contacts">
           <h2 class="visually-hidden">Адрес</h2>
-          <a class="page-header-link" href="index.html">
+          <a class="page-footer-link" href="index.html">
             <img class="footer-contacts-logo" src="images/logo-footer.svg" width="145" height="36"
               alt="Логотип интернет-магазина «Device».">
           </a>
