Добавляет состояние для логотипа

--- a/catalog.html
+++ b/catalog.html
@@ -87,7 +87,7 @@
                 </svg>
               </li>
               <li class="breadcrumbs-item">
-                <a class="breadcrumbs-link">Моноподы для селфи</a>
+                <a class="breadcrumbs-link" href="#">Моноподы для селфи</a>
               </li>
             </ul>
           </div>
@@ -276,7 +276,7 @@
       <div class="container">
         <section class="footer-contacts">
           <h2 class="visually-hidden">Адрес</h2>
-          <a class="page-header-link" href="index.html">
+          <a class="page-footer-link" href="index.html">
             <img class="footer-contacts-logo" src="images/logo-footer.svg" width="145" height="36"
               alt="Логотип интернет-магазина «Device».">
           </a>
