Меняет стиль кнопок при разных статусах

--- a/catalog.html
+++ b/catalog.html
@@ -238,8 +238,8 @@
                 <button class="button button-secondary" type="button">Загрузить ещё</button>
                 <section class="pagination-menu">
                   <div class="pagination-back-btn">
-                    <a class="pagination-link pagination-prev-disabled" href="#">
-                      <span class="pagination-prev">Назад</span>
+                    <a class="pagination-link pagination-prev pagination-prev-disabled" href="#">
+                      <span class="pagination-prev-text">Назад</span>
                     </a>
                   </div>
                   <ul class="pagination">
@@ -261,7 +261,7 @@
                   </ul>
                   <div class="pagination-next-btn">
                     <a class="pagination-link pagination-next" href="#">
-                      <span class="pagination-next">Вперёд</span>
+                      <span class="pagination-next-text">Вперёд</span>
                     </a>
                   </div>
                 </section>
