--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     d="m15.7 14.3-3.1-3.1C13.5 10 14 8.6 14 7c0-3.9-3.1-7-7-7S0 3.1 0 7s3.1 7 7 7c1.6 0 3-.5 4.2-1.4l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.2-.1-.5-.3-.7ZM2 7c0-2.8 2.2-5 5-5s5 2.2 5 5-2.2 5-5 5-5-2.2-5-5Z" />
                 </svg>
               </label>
-              <button class="button search-button" type="submit">Найти</button>
+              <button class="button search-button" type="submit"><span>Найти</span></button>
             </form>
             <a class="user-link user-login" href="#"><svg class="user-link-icon" aria-hidden="true" focusable="false"
                 xmlns="http://www.w3.org/2000/svg" width="13" height="12" fill="none" viewBox="0 0 13 12">
@@ -381,7 +381,8 @@
                 <input class="email-input" placeholder="Ваш e-mail" type="email" name="newsletter-email"
                   id="newsletter-email" required>
               </label>
-              <button class="button button-extra" type="submit">Подписаться</button>
+              <button class="button button-extra" type="submit"><span
+                  class="button-extra-text">Подписаться</span></button>
             </form>
             <span class="newsletter-remark"><svg class="checkmark-icon" aria-hidden="true" focusable="false"
                 xmlns="http://www.w3.org/2000/svg" width="15" height="14" fill="none" viewBox="0 0 15 14">
