--- a/index.html
+++ b/index.html
@@ -410,9 +410,9 @@
           <div class="footer-navigation">
             <h2 class="visually-hidden">Наши преимущества</h2>
             <nav class="navigation footer-navigation">
-              <a class="navigation-link" href="#">Доставка</a>
-              <a class="navigation-link" href="#">Гарантия</a>
-              <a class="navigation-link" href="#">Контакты</a>
+              <a class="footer-navigation-link" href="#">Доставка</a>
+              <a class="footer-navigation-link" href="#">Гарантия</a>
+              <a class="footer-navigation-link" href="#">Контакты</a>
             </nav>
           </div>
 
