Вносит правки в код

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg">
     <title>HTML Academy: Девайс</title>
   </head>
 
@@ -54,7 +55,7 @@
                 </svg></span></a>
           </div>
           <nav class="navigation">
-            <a class="navigation-link" href="#">Доставка</a>
+            <a class="navigation-link navigation-link-active" href="#">Доставка</a>
             <a class="navigation-link" href="#">Гарантия</a>
             <a class="navigation-link" href="#">Контакты</a>
           </nav>
